Update index file
updated name

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-<h1>CSS Transition</h1>
-<div class="block"></div>
+	<h1>CSS Transition by <a href="https://www.dineshkumar.io">Dinesh</a></h1>
+	<div class="block"></div>
 
 </body>
 
